# chat-ai

./: .gitignore  deploy.sh
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/knowledge/persona/: persona_prompt.txt
backend/app/knowledge/scenes/: s01_女生冷淡敷衍.txt  s02_女生说累了.txt  s03_女生不主动发消息.txt  s04_推进暧昧关系.txt  s05_冷读破冰.txt  s06_索取型女人识别.txt
backend/app/models/: __init__.py  chat.py  girl.py  user.py
backend/app/routers/: chat.py  debug.py  girls.py  user.py
backend/app/services/: __init__.py  chat_history.py  image_parser.py  knowledge_base.py  llm_client.py  reply_generator.py
backend/app/utils/: __init__.py  storage.py
data/: 凡哥_人格总结.txt  凡哥_场景归纳.txt
data/抖音凡哥/: 万能聊天破冰公式.txt  三招心理博弈让女生主动确认关系.txt  作为男人，一定不能在一棵树上吊死.txt  喜怒哀乐，四招教你提供情绪价值.txt  女生总是约不出来？一定要试试这七句话.txt  如何和女生自然的进入暧昧期.txt  当一个女生从热情变冷漠，就是你得到她的开始.txt  找女朋友就应该找兄弟介绍的.txt  找老婆红黑榜.txt  拥有这些特质，就能被女大倒追.txt  教你如何让女生沦陷.txt  普通男生快速脱单的两大秘诀.txt  暧昧期那些让女生直呼受不了的事.txt  最让女生抵抗不了的男生是什么样的.txt  能让女生强行爱上你的方法——冷读.txt  能让女生迅速爱上你的技巧.txt  让任何女人真正上瘾离不开你的核心.txt
docs/: 0-AiChat-Agent-详细开发文档.md  1-AiChat-Agent-需求调研问卷.md  2-算法.md
frontend/: .env.production  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BottomNav.tsx  Layout.tsx
frontend/src/pages/: Chat.tsx  DebugPrompt.tsx  GirlProfile.tsx  Home.tsx  UserProfile.tsx
frontend/src/services/: api.ts
