[project]
name = "chat-ai-backend"
version = "0.1.0"
description = "AiChat Agent backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.0",
    "python-multipart==0.0.9",
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",
    "python-dotenv==1.0.0",
    "httpx<0.28",
    "openai==1.30.0",
    "anthropic==0.28.0",
    "pillow==11.1.0",
    "aiofiles==23.2.0",
]

[tool.uv]
dev-dependencies = []
